<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:layout_width="139dp"
        android:layout_height="115dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="32dp"
        android:onClick="onChicagoButtonClick"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chicago_pizza" />

    <ImageButton
        android:layout_width="138dp"
        android:layout_height="115dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="176dp"
        android:onClick="onNewYorkButtonClick"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ny_pizza" />

    <ImageButton
        android:layout_width="139dp"
        android:layout_height="118dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="316dp"
        android:onClick="onCurrentOrderButtonClick"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cart_icon" />

    <ImageButton
        android:layout_width="139dp"
        android:layout_height="119dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="460dp"
        android:onClick="onStoreOrderButtonClick"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizza_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="236dp"
        android:layout_marginTop="84dp"
        android:text="@string/chicagoStyleText"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="236dp"
        android:layout_marginTop="220dp"
        android:text="@string/newYorkStyleText"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="236dp"
        android:layout_marginTop="356dp"
        android:text="@string/currentOrderText"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="236dp"
        android:layout_marginTop="504dp"
        android:text="@string/storedOrdersText"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>